# cgif

./: cgif.c  cgif.h  meson.build
.github/workflows/: ci.yml
tests/: all_optim.c  animated_stripe_pattern.c  global_plus_local_table.c  max_color_table_test.c  meson.build  min_color_table_test.c  only_local_table.c  overlap_everything.c  overlap_some_rows.c
